# Ozaich

./: .gitignore  LICENSE.txt  Oziach.cabal  README.md  oziach.dl  questReq.facts  shell.nix
NOTES/: fastDownward.md
app/: Main.hs
old/: Oziach.cabal  README.md
old/NOTES/: OrderingExample.md  fastDownward.md
old/src/Oziach/: Items.hs  Kinds.hs  Quests.hs
resources/: NOTE.md
src/: Oziach.hs
src/Oziach/: ConstraintComb.hs  Items.hs  Kinds.hs  Quests.hs  Types.hs
src/Oziach/Quests/: Novice.hs
src/Oziach/Quests/F2P/: Experienced.hs  Intermediate.hs  Novice.hs
