cabal-version:      2.4
name:               Oziach
version:            0.1.0.0

synopsis: OSRS Quest Planning Utilities
description: Types and Utilities for Quest Planning in Old School Runescape
bug-reports: https://github.com/adpextwindong/Ozaich/issues/new
license:            BSD-2-Clause
author:             Takumi Crary
maintainer:         tcrary@gmail.com

copyright: 2021
category: Planning
extra-source-files:
    README.md

executable Oziach
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:   base,
                     Oziach
    hs-source-dirs:   app
    default-language: Haskell2010

library
    hs-source-dirs:
        src
    exposed-modules:
        Oziach.Types
       ,Oziach.Quests
       ,Oziach.Quests.Novice
       ,Oziach.Items
    build-depends:
        base >= 4.6 && < 5
      , containers >= 0.5
      , bifunctor
    default-language: Haskell2010

source-repository head
    type:     git
    location: git@github.com:adpextwindong/Ozaich.git
